--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <head>
 <style>
 div.background {
-  background: url(klematis.jpg) repeat;
+  background: url(https://sageserver.github.io/minecraft_wallpaper_by_stevie10-d659xhq.jpg);
   border: 2px solid black;
 }
 
