--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ div.transbox {
 }
 
 div.transbox p {
-  margin: 5%;
+  margin: 100%;
   font-weight: bold;
   color: #000000;
 }
@@ -84,7 +84,7 @@ div.transbox p {
 
 <div class="background">
   <div class="transbox">
-    <p>This is some text that is placed in the transparent box.</p>
+    <p>Am I doing this right?.</p>
   </div>
 </div>
 
