--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <style>
-        background: #363636; 
+        background-color: #d1d1d1; 
     </style>
 
     <meta charset="utf-8">
