--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <head>
     <style>
-        background-color: #d1d1d1; 
+        body{
+        background-color: #d1d1d1;
+        }
+    
     </style>
 
     <meta charset="utf-8">
