--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Mods</a>
+                        <a href="mods.html">Mods</a>
                     </li>
                 </ul>
             </div>
