--- a/mod.html
+++ b/mod.html
@@ -43,6 +43,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li>
+                        <a href="https://mods.curse.com/modpacks/minecraft/261783-ftb-beyond">Download</a>
+                    </li>
 
                 </ul>
             </div>
