--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,19 @@
     </nav>
 
     <!-- Put your page content here! -->
-Personal email: sagethedawg@gmail.com
-Professional email: sagethedawg@students.columbiabasin.edu
-Phone number: Contact my email if you need my number
+<p style="color:black;">
+<center>
+	This site contains information about the modpack running on my server.<br>
+    IP:------------
+<br>
+<br>	
+
+    Personal email:		sagethedawg@gmail.com <br>
+    Professional email:	sagethedawg@students.columbiabasin.edu <br>
+    Phone number:		Contact my email if you need my number <br> <br>
+    </center>
+	
+</p>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
