--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="contact.html">About</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <li>
                         <a href="mod.html">Mods</a>
