--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
     <!-- Put your page content here! -->
 <p style="color:black;">
 <center>
-	This site contains information about the modpack running on my server.<br>
-    IP:------------
+	Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
+   
 <br>
 <br>	
 
     Personal email:		sagethedawg@gmail.com <br>
-    Professional email:	sagethedawg@students.columbiabasin.edu <br>
+    Professional email:		sagethedawg@students.columbiabasin.edu <br>
     Phone number:		Contact my email if you need my number <br> <br>
     </center>
 	
