--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <!-- Put your page content here! -->
 <p style="color:black;">
 <center>
-	Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
+	<br><br><br><br>Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
     Personal email:		sagethedawg@gmail.com <br>
     Professional email:		sagethedawg@students.columbiabasin.edu <br>
     Phone number:		Contact my email if you need my number <br> <br>
