--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,11 @@
 <p style="color:black;">
 <center>
 	<br><br><br><br>Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
-    Personal email:		sagethedawg@gmail.com <br>
-    Professional email:		sagethedawg@students.columbiabasin.edu <br>
-    Phone number:		Contact my email if you need my number <br> <br>
+    	Sage's Discord(atm):	Sage #9615	
+	SageServer Dicord:	https://discord.gg/fzPnKKy
+	Personal email:		sagethedawg@gmail.com <br>
+   	Professional email:	sagethedawg@students.columbiabasin.edu <br>
+    	Phone number:		Contact my email if you need my number <br> <br>
     </center>
 	
 </p>
