--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <li>
                         <a href="mod.html">Mods</a>
                     </li>
+                    <li>
+                        <a href="https://discord.gg/fzPnKKy">Join The Discord</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
