--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
     <!-- Put your page content here! -->
 <p style="color:black;">
 <center>
-	<br><br><br><br>Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
-    	Sage's Discord(atm):	Sage #9615	
-	SageServer Dicord:	https://discord.gg/fzPnKKy
+	<br><br>Hello, my name is Erik, aka Sage415. This site contains information about my server.<br>
+    	Sage's Discord(atm):	Sage #9615<br>	
+	SageServer Discord:	https://discord.gg/fzPnKKy<br>
 	Personal email:		sagethedawg@gmail.com <br>
    	Professional email:	sagethedawg@students.columbiabasin.edu <br>
     	Phone number:		Contact my email if you need my number <br> <br>
