--- a/mod.html
+++ b/mod.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Put your page content here! -->
-<img src="img/BeyondImage.png" height="480" width="640">
+<img src="img/BeyondImage.png"  width="100%">
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
